--- a/MicroStreamTraining/pom.xml
+++ b/MicroStreamTraining/pom.xml
@@ -88,6 +88,12 @@
 			<artifactId>xdev-server-ui</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>
